Pending with only the registered info retrieval

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /LoginApp.class
 /OnlineTest.class
 /User.class
+/TestResult.class
+/RegisterApp.class
+/LoginApp$RegistrationWindow.class
+/UserDatabase.class
+.dist
